<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:paddingBottom="50dp"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.modul7.utils.CustomImageLogo
            android:id="@+id/iv_logo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/logo_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            tools:src="@drawable/light_dicoding" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_logo"
            app:layout_constraintStart_toStartOf="@id/iv_logo"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginVertical="20dp"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/iv_logo"
            app:layout_constraintStart_toStartOf="@id/iv_logo"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            android:text="@string/login"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:padding="0dp"
            android:layout_marginTop="30dp"
            app:errorEnabled="true"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@+id/tv_welcome"
            app:layout_constraintStart_toStartOf="@id/tv_welcome"
            app:layout_constraintTop_toBottomOf="@id/tv_login">

            <com.example.modul7.utils.CustomEditText
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints="false"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="10dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/second_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_input"
            android:layout_marginHorizontal="20dp"
            app:counterEnabled="true"
            android:padding="0dp"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@+id/iv_logo"
            app:layout_constraintStart_toStartOf="@id/iv_logo"
            app:layout_constraintTop_toBottomOf="@id/first_input">

            <com.example.modul7.utils.CustomEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:drawableStart="@drawable/lock_icon"
                android:hint="@string/password_hint"
                android:autofillHints="false"
                android:drawablePadding="10dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/tv_register_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_logo"
            app:layout_constraintStart_toStartOf="@+id/iv_logo"
            app:layout_constraintTop_toBottomOf="@+id/second_input">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_info"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:textColor="@color/blue_ocean"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:text="@string/login"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_logo"
            app:layout_constraintStart_toStartOf="@+id/iv_logo"
            app:layout_constraintTop_toBottomOf="@id/tv_register_group" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressBar_login"
            android:visibility="gone"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>