...
    <string name="fab_content_description">add story floating action button</string>
    <string name="iv_content_description">story\'s image</string>
    <string name="user_name">Name</string>
    <string name="error_toast">Error : %1$s</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="main_activity_title">Story Lists</string>
    <string name="add_story_title">Add Story</string>
    <string name="detail_title">Story Detail</string>
    <string name="empty_field">Field must be filled!</string>
    <string name="login_success">Successfully login to existing account</string>
    <string name="register_success">Successfully create an account!</string>
    <string name="all_field_empty">Error : Please fill all the fields</string>
...
